--- a/index.html
+++ b/index.html
@@ -3,24 +3,209 @@
 <html>
  <head>
    <title>Shop Floor Visualization</title>
- 
+	<link rel="stylesheet" href="foundation.css" />
+	<link rel="stylesheet" href="app.css" />
+	<link rel="stylesheet" href="d3-context-menu.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="jquery.js"></script>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" >
+	<script src="bootstrap/js/bootstrap.min.js" ></script>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-toggle.min.css" >
+	<script src="bootstrap/js/bootstrap-toggle.min.js" ></script>
    <style type="text/css">
 
    </style>
  </head>
  <body>
+ <nav class="navbar navbar-inverse" id="navBar">
+    <div class="container-fluid">
+      <div class="navbar-header">
+	       <a class="navbar-brand" href="#">ShopFloor Layout</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a href="#" data-toggle="modal" data-target="#themeModal">Theme</a></li>
+	      <li><a href="#" data-toggle="modal" data-target="#keyModal">Key</a></li>
+	      <li><a href="#">Save</a></li>
+	      <li style="position:absolute; top:5px; right:10px;">
+	         <input id="adminToggle" type="checkbox" data-toggle="toggle" data-on="Admin On" data-off="Admin Off" data-onstyle="success" data-offstyle="danger">
+	         <script>
+	          $("#adminToggle").change(function(){
+	             if($(this).prop("checked") == true){
+	               set_admin_on();
+	             }else{
+                 admin_mode = false;
+                 alert("Admin Mode Off");
+	             }
+	          });
+          </script>
+	     </li>
+      </ul>
+    </div>
+  </nav>
+  
+  <div class="modal fade" id="themeModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">Theme</h3>
+        </div>
+        <div class="modal-body">
+          <ul style="align-items: center;">
+            <li>NavBar</li>
+            <li class="themeColor"><input id="nvColor" type="color"></li>
+            <script>
+              $(document).ready(function(){
+                $("#nvColor").change(function(){
+                  var clr = $(this).val();
+                  $("#navBar").css("background-color",clr);
+                });
+              });
+            </script>
+            <li>Background </li>
+            <li class="themeColor"><input id="bgColor" type="color"></li>
+            <script>
+              $(document).ready(function(){
+                $("#bgColor").change(function(){
+                  var clr = $(this).val();
+                  $("body").css("background-color",clr);
+                  $("rect").css("fill",clr);
+                });
+              });
+            </script>
+            <li>Line</li>
+            <li class="themeColor"><input id="liColor" type="color"></li>
+            <script>
+              $(document).ready(function(){
+                $("#liColor").change(function(){
+                  var clr = $(this).val();
+                  $(".link").css("stroke",clr);
+                });
+              });
+            </script>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div id="keyModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+	      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h3 class="modal-title">Key</h3>
+	       </div>
+	       <div class="modal-body">
+           <img src="key.png">
+	       </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="RenameNodeModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <h2 id="modalTitle">Edit Node</h2>
+    <form id="RenameNodeForm">
+      <div class="row">
+        <div class="large-12 columns">
+          <label>Node name
+            <input type="text" class="inputName" id='RenameNodeName' placeholder="node name" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-8 columns">
+          &nbsp;
+        </div>
+        <div class="large-4 columns">
+          <a href="#" class="button info" onclick="close_rename_node_modal()">Cancel</a>
+          <a href="#" class="button success" onclick="rename_node()">Rename</a>
+        </div>
+      </div>
+    </form>
+    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+  </div>
+
+  <div id="CreateNodeModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <h2 id="modalTitle">Create Node</h2>
+    <form id="CreateNodeForm">
+      <div class="row">
+        <div class="large-12 columns">
+          <label style="font-size:18px;">Node name
+            <input type="text" class="inputName" id='CreateNodeName' placeholder="node name" />
+          </label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-8 columns">
+          &nbsp;
+        </div>
+        <div class="large-4 columns">
+          <a href="#" class="button info" onclick="close_modal()">Cancel</a>
+          <a href="#" class="button success" onclick="create_node()">Create</a>
+        </div>
+      </div>
+    </form>
+    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+  </div>
+
+  <div id="ShowNodeDetailsModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <h2 id="modalTitle">Node Details</h2>
+    <div class="description-container">
+      <span class="modal-nodeID"> Node Name: </span><br>
+      <span class="modal-nodeCost">Node Cost: </span><br>
+      <span class="modal-description">Node Description: </span><br><br>
+    </div>
+    <div class="nodeMeta">
+      <ul class="first-col">
+	       <li>Status: Active</li>
+	       <li>Rev: 0</li>
+	       <li>Iteration: 0</li>
+	       <li>Percent Complete: 50%</li>
+      </ul>
+      <ul class="second-col">
+	       <li>Actual Hours: 2</li>
+	       <li>Planned Hours: 4</li>
+	       <li>Start: 01/22/18</li>
+         <li>End: 05/15/18</li>
+      </ul>
+    </div>
+    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+  </div>
+  
 	<div id="shopfloor-container"></div>
 	<script src="d3.v3.min.js"></script>
-	<script src="jquery.js"></script>
    <script src="shopfloor.js"></script>
-    <script src="underscore-min.js"></script>
+   <script src="d3-context-menu.js"></script>
+    <!--<script src="underscore-min.js"></script>-->
   <script src="fastclick.js"></script>
-  <script src="foundation.min.js"></script>
-   
+  <script src="foundation.min.js"></script> 
     
    <script>
-
-
+	$('document').ready(function(){
+    $(document).foundation();
+    $(document).on('opened', '[data-reveal]', function () {
+    var element = $(".inputName:visible").first();
+    element.focus(function(){
+    this.selectionStart = this.selectionEnd = this.value.length;
+    });
+    element.focus();
+    });
+	$('#RenameNodeForm').submit(function(e){
+    rename_node();
+    return false;
+    });
+    $('#CreateNodeForm').submit(function(e){
+    create_node();
+    return false;
+    });
+    var floorJSON = d3.json("shopFloor.json", plotNodes);
+    });
+	
     
    </script>
  </body>
