--- a/index.html
+++ b/index.html
@@ -89,44 +89,44 @@
       <div class="row">
         <div class="large-12 columns">
           <label>Node Name
-            <input type="text" class="inputName" id='RenameNodeName' placeholder="node name" />
+            <input type="text" class="inputName" id='RenameNodeName' placeholder="Node Name" />
           </label>
           <label>Node Cost
-            <input type="text" class="inputName" id='EditNodeCost' placeholder="node name" />
+            <input type="text" class="inputName" id='EditNodeCost' placeholder="Node Cost" />
           </label>
           <label>Node Description
-            <input type="text" class="inputName" id='EditNodeDescription' placeholder="node name" />
+            <input type="text" class="inputName" id='EditNodeDescription' placeholder="Node description" />
           </label>
             <br>
           <label>Status
             <select>
               <option id="EditActive" value="active">Active</option>
-              <option id="cUnactive" value="unactive">Unactive</option>
+              <option id="Inactive" value="Inactive">Inactive</option>
             </select>
           </label>
             <br>
           <label>Rev
-            <input type="text" class="inputName" id='EditRev' placeholder="node name" />
+            <input type="text" class="inputName" id='EditRev' placeholder="Rev" />
           </label>
           <label>Iteration
-            <input type="text" class="inputName" id='EditIteration' placeholder="node name" />
+            <input type="text" class="inputName" id='EditIteration' placeholder="Iteration" />
           </label>
           <label>Percent Complete
-            <input type="text" class="inputName" id='EditPercentageComplete' placeholder="percentge complete" />
+            <input type="text" class="inputName" id='EditPercentageComplete' placeholder="Percentge Complete" />
           </label>
             <br>
           <label>Actual Hours
-            <input type="text" class="inputName" id='EditActualHours' placeholder="actual hours" />
+            <input type="text" class="inputName" id='EditActualHours' placeholder="Actual Hours" />
           </label>
           <label>Planned Hours
-            <input type="text" class="inputName" id='EditPlannedHours' placeholder="planned hours" />
+            <input type="text" class="inputName" id='EditPlannedHours' placeholder="Planned Hours" />
           </label>
             <br>
           <label>Start Date
-            <input type="text" class="inputName" id='EditStarDate' placeholder="start date" />
+            <input type="text" class="inputName" id='EditStarDate' placeholder="Start Date" />
           </label>
           <label>End Date
-            <input type="text" class="inputName" id='EditEndDate' placeholder="end date" />
+            <input type="text" class="inputName" id='EditEndDate' placeholder="End Date" />
           </label>
         </div>
       </div>
@@ -136,7 +136,7 @@
         </div>
         <div class="large-4 columns">
           <a href="#" class="button info" onclick="close_rename_node_modal()">Cancel</a>
-          <a href="#" class="button success" onclick="rename_node()">Rename</a>
+          <a href="#" class="button success" onclick="rename_node()">Save</a>
         </div>
       </div>
     </form>
