--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
 <!DOCTYPE html>
-<html>
- <head>
+<head lang="en">
+  <meta charset="utf-8">
   <title>Shop Floor Visualization</title>
 	<link rel="stylesheet" href="foundation.css" />
 	<link rel="stylesheet" href="app.css" />
